<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:orientation="vertical">

    <EditText
        android:id="@+id/card_number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number_hint"
        android:inputType="number"
        android:paddingTop="@dimen/activity_vertical_margin"
        />

    <EditText
        android:id="@+id/card_holder_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_holder_hint"
        android:inputType="textCapCharacters"
        android:paddingTop="@dimen/activity_vertical_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/expires"/>

        <EditText
            android:id="@+id/expiration_month_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/expiry_month_hint"
            android:inputType="number"/>

        <EditText
            android:id="@+id/expiration_year_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/expiry_year_hint"
            android:inputType="number"/>
    </LinearLayout>

    <EditText
        android:id="@+id/cvv_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cvv_hint"
        android:inputType="number"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/use_case_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/use_case"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/add_cc_button"
        style="@style/button"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_cc"/>


    <TextView
        android:id="@+id/error_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@android:color/holo_red_dark"/>
</LinearLayout>