<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/using_email"
            />


        <Button
            android:id="@+id/add_cc_button"
            style="@style/button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/add_cc"/>

        <Button
            android:id="@+id/add_debit_button"
            style="@style/button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/add_debit"/>

        <Button
            android:id="@+id/add_sepa_button"
            style="@style/button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/add_sepa"/>

        <Button
            android:id="@+id/add_paypal_button"
            style="@style/button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/add_paypal"/>

        <Button
            android:id="@+id/get_PI_button"
            style="@style/button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/get_pi"/>

    </LinearLayout>
</ScrollView>