<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <EditText
        android:id="@+id/paypal_auth_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/paypal_auth_token_hint"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/use_case_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/use_case"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <Button
        style="@style/button"
        android:id="@+id/add_paypal_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_paypal"/>


    <TextView
        android:id="@+id/error_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@android:color/holo_red_dark"/>

</LinearLayout>