<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:orientation="vertical">

    <TextView
        android:id="@+id/error_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"/>

    <EditText
        android:id="@+id/use_case_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/use_case"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/get_PI_button"
        style="@style/button"
        android:layout_below="@id/use_case_filter"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/get_pi"/>

    <ListView
        android:id="@+id/payment_instruments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/set_PI_button"
        android:layout_below="@id/get_PI_button"/>

    <TextView
        android:id="@+id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_instruments"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        />

    <Button
        android:id="@id/set_PI_button"
        style="@style/button"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/set_pi"/>


</RelativeLayout>